/*
 * This file was generated by the Gradle 'init' task.
 */
plugins {
    id 'java'
    id 'maven-publish'
    id 'eclipse'
    id 'org.springframework.boot' version '2.1.9.RELEASE'
}
apply plugin: "io.spring.dependency-management"

// Explicitly set the main class to avoid ASM version issues with JDK 17
bootJar {
    mainClassName = 'org.apache.fineract.ServerApplication'
}

// Alternative syntax for newer Gradle versions
springBoot {
    mainClassName = 'org.apache.fineract.ServerApplication'
}

// Make sure we're building a proper Spring Boot JAR
bootJar {
    enabled = true
    archiveClassifier = '' // This ensures bootJar replaces the default jar
}

// Disable the default jar task to avoid confusion
jar {
    enabled = false
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    maven {
        url = uri('https://mifos.jfrog.io/artifactory/phee-gradle-local')
    }
    maven {
        url = uri('https://mifos.jfrog.io/artifactory/mifosx-gradle-local')
    }
    mavenCentral()
}

ext {
    springBootVersion = '2.1.9.RELEASE'
}

dependencies {
    implementation 'org.springframework.security:spring-security-jwt:1.1.0.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.4.1.RELEASE'
    implementation 'org.json:json:20190722'
    implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:2.7.6'
    implementation 'org.hibernate:hibernate-jpamodelgen:5.4.17.Final'
    annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.4.17.Final'
    implementation 'joda-time:joda-time:2.10.6'
    implementation 'org.apache.commons:commons-lang3:3.3.2'
    implementation 'com.zaxxer:HikariCP:3.4.5'
    implementation 'mysql:mysql-connector-java:8.0.20'
    implementation 'com.googlecode.flyway:flyway-core:2.1.1'
    implementation 'net.sf.ehcache:ehcache:2.10.6'
    testImplementation 'junit:junit:4.11'
    implementation 'net.sf.supercsv:super-csv:2.4.0'
    implementation 'com.amazonaws:aws-java-sdk:1.11.486'
    implementation 'com.azure:azure-storage-blob:12.12.0'
    implementation 'commons-io:commons-io:2.4'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation "org.springdoc:springdoc-openapi-ui:1.6.11"
    // implementation 'org.mifos:ph-ee-connector-common:1.4.1-SNAPSHOT'
    implementation 'org.mifos:ph-ee-connector-common:1.4.1-gazelle'
    implementation "org.springframework.boot:spring-boot-starter:$springBootVersion"
    implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
    implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
}

group = 'org.apache.fineract'
version = 'gazelle-1.1.0'
sourceCompatibility = '11'
targetCompatibility = '11'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
        vendor = JvmVendorSpec.ADOPTIUM // or ORACLE, AMAZON, etc.
    }
}

sourceSets {
    generated {
        java {
            srcDirs = ['src/generated/java']
        }
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.annotationProcessorGeneratedSourcesDirectory = file("src/generated/java")
    options.release = 11
    options.compilerArgs.addAll([
        '-parameters',
        '--enable-preview' // Remove this if you don't need preview features
    ])
}